--- Version 0.7
Added output delay filter which is configurable with new plugin parameter 'filter_delay'

--- Version 0.6
Add xine-ui-atmolight-switch patch.
Add xineliboutput-atmolight-switch patch.
Changed 'analyze_rate' default from 40 to 35
Migrate to vdpau-extensions-patch v15. Now this version is minimum requirement!

--- Version 0.5

Added storage of actual plugin parameters into xine configuration key 'post.atmo.parameters'.
Added support for 'on the fly' parameter changes.
Added 'start_delay' plugin parameter for individual adjustment of start delay after start of new stream.
Changed start delay default from 1000ms to 250ms
Added 'enable' plugin parameter for switching the atmolight on/off on the fly.
DF10CH configuration parameters are now mandatory.
Improved calculation of weights for border area
Improved calculation of average brightness
Add support for DF10CH config version 2 (overscan, edge weighting, analyze size are now read from controller)
Improved DF10CH driver error logging
Added 'hue_threshold' parameter.
Modify 'edge weighting' parameter. Value is now divided by 10 to reach more fine control
Changed 'edge weighting' default from 80 to 60
Changed 'darkness limit' default from 10 to 1

--- Version 0.4

Fixed calculation of mean brightness value.
Changed default value of 'darkness' plugin parameter from 50 to 10.
 
--- Version 0.3

Added DF10CH Atmolight controller output driver.
Added new areas 'center', 'top_left', 'top_right', 'bottom_left', 'bottom_right'.
Added 'center' channel support for classic controller output driver.
Added start delay of 1000ms for output of color values after start of new stream.
Added support for building debian installation packages.

