@@ -1,5 +1,6 @@
 --- Version 0.7
-Added output delay filter which is configurable with new plugin parameter 'filter_delay'
+Added output delay filter which is configurable with new plugin parameter 'filter_delay'.
+Added uniform average brightness calculation mode which is configurable with new plugin parameter 'uniform_brightness'.
 
 --- Version 0.6
 Add xine-ui-atmolight-switch patch.
